<resources>
  <string name="app_name">AirCasting</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="menu_start_aircasting">Start</string>
  <string name="menu_stop_aircasting">Stop</string>
  <string name="menu_note_or_share">Note/Share</string>
  <string name="menu_about">About</string>
  <string name="menu_preferences">Settings</string>
  <string name="menu_sessions">Sessions</string>
  <string name="menu_share">Share</string>
  <string name="save_session_message">Would you like to save this session?</string>
  <string name="saving">Saving...</string>
  <string name="loading">Loading...</string>
  <string name="save">Save</string>
  <string name="discard">Discard</string>
  <string name="session">Session</string>
  <string name="title">Title</string>
  <string name="avg">Avg</string>
  <string name="password">Password</string>
  <string name="peak">Peak</string>
  <string name="calibration">Microphone maximum</string>
  <string name="view">View</string>
  <string name="add_to_dashboard">Add to Dashboard</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="share">Share</string>
  <string name="continue_streaming">Continue Streaming</string>
  <string name="cancel">Cancel</string>
  <string name="upload">Upload</string>
  <string name="username">Profile Name</string>
  <string name="low">Low</string>
  <string name="high">High</string>
  <string name="ok">OK</string>
  <string name="email">Email</string>
  <string name="graph">Graph</string>
  <string name="map">Map</string>
  <string name="empty"></string>
  <string name="clear">Clear</string>
  <string name="profile">Profile</string>
  <string name="average_threshold">Average sounds (dB)</string>
  <string name="color_scale">Heat Legend Units</string>
  <string name="edit_session">Edit Session</string>
  <string name="heat_map_density">CrowdMap grid cell size</string>
  <string name="loud_threshold">Loud sounds (dB)</string>
  <string name="make_a_note">Make Note</string>
  <string name="satellite_view">Satellite map</string>
  <string name="save_session">Save Session</string>
  <string name="very_loud_threshold">Very loud sounds (dB)</string>
  <string name="use_24_hour_format">Use 24-hour format</string>
  <string name="profile_summary">Create an account or sign in</string>
  <string name="average_threshold_summary">Measurements greater than this will be marked in yellow.</string>
  <string name="calibration_summary">Set this to match the maximum sound level that can be processed by your phone\'s
    microphone. For most phones this is between 80 and 100.
  </string>
  <string name="color_scale_summary">Adjust the relationship between sound levels and display colors.</string>
  <string name="connect_to_aircasting">Connect to AirCasting</string>
  <string name="create_new_account">Create new account?</string>
  <string name="heat_map_density_summary">Grid cell sizes can be any number 1-40. Smaller grid cell sizes will display averages for smaller areas but will increase downloading times.</string>
  <string name="loud_threshold_summary">Measurements greater than this will be marked in orange.</string>
  <string name="save_and_share">Save and share</string>
  <string name="share_with">Share with</string>
  <string name="very_loud_threshold_summary">Measurements greater than this will be marked in red.</string>
  <string name="too_loud_summary">Measurements greater than this will not be displayed.</string>
  <string name="too_quiet_summary">Measurements less than this will not be displayed.</string>
  <string name="color_scale_error">The values are incorrect</string>
  <string name="login_error">Credentials are incorrect.</string>
  <string name="profile_name_or_email_field_blank">Profile name or email field can\'t be blank</string>
  <string name="password_blank">Password can\'t be blank</string>
  <string name="account_creation_error">Could not create account</string>
  <string name="unknown_error">Unknown error</string>
  <string name="email_invalid">The email is invalid</string>
  <string name="password_too_short">The password is too short</string>
  <string name="no_internet">Please check your internet connection.</string>
  <string name="session_link_template"
          formatted="false">View my AirCasting session: %s
  </string>
  <string name="session_file_template">View my AirCasting session. It\'s attached as a CSV file.</string>
  <string name="profile_template" formatted="false">Signed in as %s
  </string>
  <string name="title_label">Title</string>
  <string name="tags_label">Tags</string>
  <string name="description_label">Description:</string>
  <string name="db_avg">Avg dB</string>
  <string name="peak_gauge">Peak dB</string>
  <string name="now_gauge">Now dB</string>
  <string name="save_changes">Save Changes</string>
  <string name="reset_to_default">Reset to Default</string>
  <string name="no_data">No data recorded</string>
  <string name="share_link">Share Link</string>
  <string name="share_file">Share File</string>
  <string name="send_file">Send</string>
  <string name="share_title">View my AirCasting session</string>
  <string name="im_aircasting">I\'m AirCasting</string>
  <string name="session_options">Session Options</string>
  <string name="discard_session">Discard Session</string>
  <string name="session_details">Session Details</string>
  <string name="stream_options">Stream Options</string>
  <string name="choose_session_type">Choose Session Type</string>
  <string name="choose_streaming_method">Choose Streaming Method</string>
  <string name="note">Note</string>
  <string name="sign_out">Sign Out</string>
  <string name="contribute_to_crowd_map">Share to CrowdMap</string>
  <string name="forgot_password">Forgot Password</string>
  <string name="reset_email_sent">An email with further instructions has been sent</string>
  <string name="account_does_not_exist">An account with this email does not exist</string>
  <string name="working">Working...</string>
  <string name="create_profile">Create Profile</string>
  <string name="sign_in">Log In</string>
  <string name="reset_password">Reset Password</string>
  <string name="username_or_email">Profile Name or Email</string>
  <string name="gps_off_warning">Please enable your GPS receiver.</string>
  <string name="send_emails">Send me emails from AirCasting</string>
  <string name="no_gps_fix_warning">Location fix could not be confirmed. Please make sure the location displayed is
    correct.
  </string>
  <string name="sign_in_to_configure">Create a profile or login to configure your AirBeam2</string>
  <string name="fixed_sessions_streaming">Streaming</string>
  <string name="fixed_sessions_streaming_summary">Check to stream data from a fixed location to a web server for real-time viewing</string>
  <string name="contribute_explanation">Do you want to contribute your AirCasting session to the CrowdMap? Sessions
    contributed to the CrowdMap are publicly accessible.
  </string>
  <string name="yes_contribute">Yes, save and contribute</string>
  <string name="no_contribute">Save but don\'t contribute</string>
  <string name="keep_screen_on">Keep screen on</string>
  <string name="sound_level_measurementless">Disable phone microphone</string>
  <string name="sound_level_measurementless_summary">Check to disable sound level measurements from phone microphone.</string>
  <string name="offset_error">The offset should be between -5 and +5 dB.</string>
  <string name="share_session">Share Session</string>
  <string name="account_reminder">To save and upload your AirCasting sessions navigate to the Settings screen and sign
    in or create a profile.
  </string>
  <string name="setting_error">Value invalid</string>
  <string name="stop_aircasting">To view sessions you must first stop AirCasting.</string>
  <string name="stop_aircasting_to_calibrate">To calibrate you must first stop AirCasting.</string>
  <string name="session_not_uploaded">Session upload pending - wait a couple of minutes and try again.</string>
  <string name="location_required">You need to have location services enabled to scan for WiFi networks. Would you like to do it now?</string>
  <string name="stop_recording_first">To sign out, you must first stop recording</string>
  <string name="unnamed_session"><![CDATA[<i>unnamed</i>]]></string>
  <string name="mic_error">Could not access microphone - please make sure other apps are not using it. You may need to
    reboot your phone if the problem persists.
  </string>
  <string name="averaging_time">Averaging time</string>
  <string name="averaging_time_summary">Sound level readings are recorded every second. Adjusting the averaging time
    will average these one second readings together prior to displaying them on the map and graph.
  </string>
  <string name="averaging_time_error">The averaging time should be greater than 0</string>
  <string name="attach_photo">Attach a Photo</string>
  <string name="view_photo">View photo</string>
  <string name="photo_success">Photo attached</string>
  <string name="storage_error">Could not access the SD card</string>
  <string name="sync_now">Sync now</string>
  <string name="sync_in_progress">Syncing sessions...</string>
  <string name="sync_possible">Sync now</string>
  <string name="sync_failed">Sync failed. Check your network connection.</string>
  <string name="sync_only_wifi">Sync only through Wi-Fi</string>
  <string name="aircasting_is_recording">AirCasting is recording a session</string>
  <string name="sensors_are_active">AirCasting Location Services Active</string>
  <string name="show_route">Show route trace</string>
  <string name="external_devices">External devices</string>
  <string name="bluetooth_not_supported">Your phone does not support bluetooth.</string>
  <string name="measurement_streams">Measurement streams</string>
  <string name="unnamed">Unnamed</string>
  <string name="peak_label_template" formatted="false">Peak %s</string>
  <string name="now_label_template" formatted="false">Now %s</string>
  <string name="avg_label_template" formatted="false">Avg %s</string>
  <string name="select_sensor">Select a Sensor</string>
  <string name="all">All</string>
  <string name="delete_button_description">Delete stream button</string>
  <string name="record_button_description">Record stream button</string>
  <string name="view_button_description">View stream button</string>
  <string name="Name">Name</string>
  <string name="Address">Address</string>
  <string name="connect_sensor">Connect?</string>
  <string name="disconnect_sensor">Disconnect?</string>
  <string name="wifi">WiFi</string>
  <string name="cellular">Cellular</string>
  <string name="backend_address">Backend Address</string>
  <string name="backend_port">Backend Port</string>
  <string name="backend_settings">Backend settings</string>
  <string name="backend_settings_summary">Set backend address and port</string>
  <string name="show_graph_metadata">Show graph metadata</string>
  <string name="rearrange">Rearrange sessions</string>
  <string name="disable_maps">Disable Maps</string>
  <string name="available_sensors_label">Available</string>
  <string name="known_sensors_label">Exter</string>
  <string name="paired_sensors_label">Paired</string>
  <string name="pair_with_new_devices">Pair New Device</string>
  <string name="session_sync_failed">Session sync failed, check your network connection</string>
  <string name="dashboard">Dashboard</string>
  <string name="start_session">Start Session</string>
  <string name="wifi_ssid">WiFi Network Name</string>
  <string name="wifi_password">WiFi Password</string>
  <string name="submit">Submit</string>
  <string name="streaming_alert">Dormant stream alert</string>
  <string name="streaming_alert_summary">Check to receive an email when active fixed sessions go dormant for >30 minutes</string>
</resources>