<?xml version="1.0" encoding="utf-8"?><!--
    AirCasting - Share your Air!
    Copyright (C) 2011-2012 HabitatMap, Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    You can contact the authors by email at <info@habitatmap.org>
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/list"
    android:persistent="true">

    <android.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="contribute_to_crowdmap"
        android:summary="Check to contribute your sessions to the CrowdMap by default"
        android:title="Contribute to CrowdMap" />

    <android.preference.EditTextPreference
        android:defaultValue="20"
        android:key="heat_map_density"
        android:numeric="integer"
        android:summary="@string/heat_map_density_summary"
        android:title="@string/heat_map_density" />

    <android.preference.EditTextPreference
        android:defaultValue="100"
        android:key="calibration"
        android:numeric="integer"
        android:summary="@string/calibration_summary"
        android:title="@string/calibration" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="dormant_session_alert"
        android:summary="@string/streaming_alert_summary"
        android:title="@string/streaming_alert" />

    <android.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="24_hour_format"
        android:title="@string/use_24_hour_format" />

    <android.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="keep_screen_on"
        android:title="@string/keep_screen_on" />

    <android.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="satellite"
        android:title="@string/satellite_view" />

    <android.preference.Preference
        android:defaultValue="false"
        android:key="disable_maps"
        android:title="@string/disable_maps" />

    <android.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="sync_only_wifi"
        android:title="@string/sync_only_wifi" />

    <android.preference.Preference
        android:key="backend_settings"
        android:summary="@string/backend_settings_summary"
        android:title="@string/backend_settings" />

</PreferenceScreen>
