<?xml version="1.0" encoding="utf-8"?>
<!--
    AirCasting - Share your Air!
    Copyright (C) 2011-2012 HabitatMap, Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    You can contact the authors by email at <info@habitatmap.org>
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/DialogMain"
        >

    <include layout="@layout/dialog_toolbar"/>

    <Button style="@style/DialogButton"
            android:text="@string/add_to_dashboard"
            android:id="@+id/view"
    />
    <Button style="@style/DialogButton"
            android:text="@string/continue_streaming"
            android:id="@+id/continue_streaming"
            />
    <Button style="@style/DialogButton"
            android:text="@string/share"
            android:id="@+id/share"
    />
    <Button style="@style/DialogButton"
            android:text="@string/edit"
            android:id="@+id/edit"
            />
    <Button style="@style/DialogButton"
            android:text="@string/delete"
            android:id="@+id/delete_session"
            />
</LinearLayout>