<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogMain"
    >

    <include layout="@layout/dialog_toolbar"/>

    <TextView android:text="AirCasting recovered a session, possibly from a crash."
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/DialogText"
        />

    <EditText style="@style/AirCastingEditText"
        android:theme="@style/AirCastingEditText"
        android:singleLine="false"
        android:gravity="top"
        android:layout_height="@dimen/editTextHeight"
        android:hint="@string/title"
        android:id="@+id/session_title"
        />

    <EditText style="@style/AirCastingEditText"
        android:theme="@style/AirCastingEditText"
        android:lines="2"
        android:singleLine="false"
        android:gravity="top"
        android:hint="@string/tags_label"
        android:layout_height="@dimen/editTextHeight"
        android:id="@+id/session_tags"
        />

    <Button style="@style/DialogButton"
        android:text="@string/save_session"
        android:id="@+id/save_button"
        />
    <Button style="@style/DialogButton"
        android:text="@string/discard_session"
        android:id="@+id/discard_button"
        />
</LinearLayout>