<?xml version="1.0" encoding="utf-8"?>
<!--
    AirCasting - Share your Air!
    Copyright (C) 2011-2012 HabitatMap, Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    You can contact the authors by email at <info@habitatmap.org>
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/DialogMain">

    <TextView style="@style/DialogText"
              android:text="@string/title_label"/>

    <EditText style="@style/Wide"
              android:singleLine="false"
              android:gravity="top"
              android:id="@+id/session_title"/>

    <TextView style="@style/DialogText"
              android:text="@string/tags_label"/>

    <EditText style="@style/Wide"
              android:lines="2"
              android:singleLine="false"
              android:gravity="top"
              android:id="@+id/session_tags"/>

    <TextView style="@style/DialogText"
              android:text="@string/description_label"/>

    <EditText style="@style/Wide"
              android:lines="2"
              android:singleLine="false"
              android:gravity="top"
              android:id="@+id/session_description"/>

    <Button style="@style/DialogButton"
            android:text="@string/start_session"
            android:id="@+id/start_session"/>

    <Button style="@style/DialogLastButton"
            android:text="@string/cancel"
            android:id="@+id/cancel"/>

</LinearLayout>