<?xml version="1.0" encoding="utf-8"?>
<!--
    AirCasting - Share your Air!
    Copyright (C) 2011-2012 HabitatMap, Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    You can contact the authors by email at <info@habitatmap.org>
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_primary"
           android:checkableBehavior="none">

        <item android:id="@+id/dashboard"
              android:title="@string/dashboard"
              android:icon="@drawable/menu_dashboard_icon"
        />
        <item android:id="@+id/sessions"
              android:icon="@drawable/menu_sessions_icon"
              android:title="@string/menu_sessions"
        />
        <item android:id="@+id/settings"
              android:icon="@drawable/menu_settings_icon"
              android:title="@string/menu_preferences"
        />
        <item android:id="@+id/about"
              android:icon="@drawable/menu_about_icon"
              android:title="@string/menu_about"
        />
    </group>

    <group android:id="@+id/group_secondary"
           android:checkableBehavior="none">

        <item android:id="@+id/phone_microphone"
              android:icon="@drawable/menu_microphone_icon_black"
              android:title="Connect to phone microphone"
        />
        <item android:id="@+id/external_sensors"
              android:icon="@drawable/menu_sensors_icon_black"
              android:title="Connect to external device"
        />
    </group>
</menu>