<?xml version="1.0" encoding="utf-8"?>
<!--
    AirCasting - Share your Air!
    Copyright (C) 2011-2012 HabitatMap, Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    You can contact the authors by email at <info@habitatmap.org>
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_viewer"
    style="@style/DialogMain"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="2dp"
        android:background="@color/toolbar_blue"
        android:gravity="center_vertical"
        android:padding="3dp">

        <TextView
            android:id="@+id/note_date"
            style="@style/Fill"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:text="00/00/00 00:00"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/note_number"
            style="@style/Wrap"
            android:layout_marginRight="2dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="00/00"
            android:textColor="@android:color/primary_text_dark" />

        <ImageButton
            android:id="@+id/note_left"
            style="@style/Wrap"
            android:background="@drawable/ic_previous_note" />

        <ImageButton
            android:id="@+id/note_right"
            style="@style/Wrap"
            android:background="@drawable/ic_next_note" />

    </LinearLayout>

    <LinearLayout
        style="@style/Wide"
        android:orientation="vertical">

        <EditText
            android:id="@+id/note_text"
            style="@style/Wide"
            android:lines="5"
            android:text=""
            android:theme="@style/AirCastingEditText" />

        <Button style="@style/DialogButton"
            android:text="@string/view_photo"
            android:id="@+id/view_photo"
            android:drawableStart="@drawable/camera"
            android:drawablePadding="10dp"
            />

        <Button
            android:id="@+id/note_save"
            style="@style/DialogButton"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/note_delete"
            style="@style/DialogButton"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>
